--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BioPhi - From Nature To Nature</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=4.0">
 </head>
 <body>
 
@@ -57,16 +57,19 @@
                     <div class="icon-wrap"><i class="fas fa-leaf"></i></div>
                     <h3>Input: Biomassa</h3>
                     <p>Recuperiamo sottoprodotti agro-industriali come trebbie di birra e scarti di caffè.</p>
+                    <small>Accordi consolidati (>500kg/giorno)</small>
                 </div>
                 <div class="card-feature">
                     <div class="icon-wrap"><i class="fas fa-flask"></i></div>
                     <h3>Processo Innovativo</h3>
                     <p>Trattiamo biomasse umide senza la fase energivora di pre-essiccazione.</p>
+                    <small>Processo sostenibile</small>
                 </div>
                 <div class="card-feature">
                     <div class="icon-wrap"><i class="fas fa-recycle"></i></div>
                     <h3>Output: Valore</h3>
                     <p>Convertiamo lo scarto in granuli bioplastici e ingredienti funzionali.</p>
+                    <small>Economia Circolare Reale</small>
                 </div>
             </div>
         </div>
@@ -76,35 +79,109 @@
         <div class="container">
             <div class="section-header">
                 <h2>Prodotti B2B</h2>
+                <p>Non produciamo manufatti finali, ma semilavorati industriali.</p>
             </div>
 
             <div class="product-box">
                 <div class="p-info">
                     <h3>Stream A: Granuli Bioplastici</h3>
-                    <p>Granulo termoplastico ottenuto miscelando biomassa con matrici biopolimeriche.</p>
+                    <p><strong>Descrizione:</strong> Granulo termoplastico ottenuto miscelando biomassa trattata con matrici biopolimeriche.</p>
+                    <p><strong>Applicazioni:</strong> Stampaggio a iniezione, packaging compostabile.</p>
+                    <ul class="check-list">
+                        <li><i class="fas fa-check"></i> Compound innovativo</li>
+                        <li><i class="fas fa-check"></i> Biodegradabilità programmabile</li>
+                    </ul>
                 </div>
                 <div class="p-img">
                     <img src="images/Compound.JPG" alt="Granuli">
                 </div>
             </div>
 
+            <hr class="stream-divider">
+
             <div class="product-box reverse">
                 <div class="p-info">
                     <h3>Stream B: Ingredienti Funzionali</h3>
-                    <p>Concentrati proteici vegetali ed emicellulosa estratti durante la raffinazione.</p>
+                    <p><strong>Descrizione:</strong> Concentrati proteici vegetali ed emicellulosa estratti durante la raffinazione.</p>
+                    <p><strong>Applicazioni:</strong> Nutraceutica, cosmetica e industria chimica.</p>
+                    <ul class="check-list">
+                        <li><i class="fas fa-check"></i> Recupero solventi > 90%</li>
+                        <li><i class="fas fa-check"></i> Alto grado di purezza</li>
+                    </ul>
                 </div>
                 <div class="p-img">
                     <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=800&q=80" alt="Lab">
                 </div>
             </div>
 
+            <hr class="stream-divider">
+
             <div class="product-box">
                 <div class="p-info">
                     <h3>Stream C: Prodotti Alto Consumo</h3>
-                    <p>Sviluppo di prodotti bio-based e biodegradabili per chiudere il cerchio.</p>
+                    <p><strong>Descrizione:</strong> Grazie ai nostri partner, sviluppiamo prodotti bio-based e biodegradabili per chiudere il cerchio.</p>
+                    <p><strong>Applicazioni:</strong> Eventi, vita quotidiana, ufficio.</p>
+                    <ul class="check-list">
+                        <li><i class="fas fa-check"></i> Sostituzione plastica monouso</li>
+                        <li><i class="fas fa-check"></i> Rilascio nutrienti per il terreno</li>
+                    </ul>
                 </div>
                 <div class="p-img">
                     <img src="images/biophiglass.png" alt="Glass">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="roadmap" class="section-padding">
+        <div class="container">
+            <div class="section-header">
+                <h2>La Nostra Roadmap</h2>
+            </div>
+            <div class="roadmap-container">
+                <div class="timeline-step">
+                    <h5>Q4 2026</h5>
+                    <p>Primo campione materiale.</p>
+                </div>
+                <div class="timeline-step">
+                    <h5>Q2 2027</h5>
+                    <p>Impianto pilota: 1000 kg/giorno.</p>
+                </div>
+                <div class="timeline-step no-border">
+                    <h5>Q2 2028</h5>
+                    <p>Avvio Bioraffineria Industriale.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-padding text-center">
+        <div class="container">
+            <h5 style="color: #666; margin-bottom: 20px;">Riconoscimenti</h5>
+            <div style="display: inline-block;">
+                <span style="font-weight: bold; color: #dc3545; font-size: 1.5rem;">L'Espresso</span>
+                <p style="font-size: 0.9rem;">Vincitori: "7 Idee per cambiare l'Italia"</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contatti" class="section-padding bg-light">
+        <div class="container">
+            <div class="section-header">
+                <h2>Contattaci</h2>
+                <p>Vuoi saperne di più sul nostro processo o collaborare con noi?</p>
+            </div>
+            <div class="grid-2 align-top">
+                <div class="contact-card">
+                    <i class="fas fa-envelope fa-2x" style="color:#6C9A46; margin-bottom:15px;"></i>
+                    <h4>Email</h4>
+                    <p><a href="mailto:hello@biophi.it">hello@biophi.it</a></p>
+                </div>
+                <div class="contact-card">
+                    <i class="fas fa-users fa-2x" style="color:#6C9A46; margin-bottom:15px;"></i>
+                    <h4>Team Founders</h4>
+                    <p><strong>Edoardo Monti</strong><br>Co-Founder & CEO</p>
+                    <p style="margin-top:10px;"><strong>Simone Battisti</strong><br>Co-Founder & CTO</p>
                 </div>
             </div>
         </div>
@@ -123,4 +200,3 @@
 
 </body>
 </html>
-
