--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
         </div>
     </section>
 
-    <section class="section-padding text-center">
-        <div class="container">
-            <h5 style="color: #666; margin-bottom: 20px;">Riconoscimenti</h5>
-            <div style="display: inline-block;">
-                <span style="font-weight: bold; color: #dc3545; font-size: 1.5rem;">L'Espresso</span>
-                <p style="font-size: 0.9rem;">Vincitori: "7 Idee per cambiare l'Italia"</p>
+    <section class="section-padding bg-white">
+        <div class="container flex-center-column">
+            <h5 class="text-muted">Riconoscimenti</h5>
+            
+            <div class="award-box">
+                <span class="award-title">L'Espresso</span>
+                <p>Vincitori: "7 Idee per cambiare l'Italia"</p>
             </div>
         </div>
     </section>
@@ -200,3 +201,4 @@
 
 </body>
 </html>
+
