--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             <h5 class="text-muted">Riconoscimenti</h5>
             
             <div class="award-box">
-                <span class="award-title">L'Espresso</span>
+                <img src="images/L'Espresso.png" alt="Logo L'Espresso" class="award-logo">
+    
                 <p>Vincitori: "7 Idee per cambiare l'Italia"</p>
             </div>
         </div>
@@ -201,4 +202,5 @@
 
 </body>
 </html>
+
 
