--- a/index.html
+++ b/index.html
@@ -198,23 +198,22 @@
                 <div class="form-wrapper">
                     <form action="https://formsubmit.co/hello@biophi.it" method="POST" class="biophi-form">
                         
-                        <input type="text" name="_honey" style="display:none">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://www.biophi.it">
 
                         <div class="form-group">
                             <label for="name">Nome e Cognome</label>
-                            <input type="text" name="name" id="name" placeholder="Mario Rossi" required>
+                            <input type="text" name="name" id="name" placeholder="Es. Mario Rossi" required>
                         </div>
 
                         <div class="form-group">
                             <label for="email">Indirizzo Email</label>
-                            <input type="email" name="email" id="email" placeholder="mario@azienda.it" required>
+                            <input type="email" name="email" id="email" placeholder="Es. mario@azienda.it" required>
                         </div>
 
                         <div class="form-group">
                             <label for="message">Messaggio</label>
-                            <textarea name="message" id="message" rows="5" placeholder="Scrivi qui la tua richiesta..." required></textarea>
+                            <textarea name="message" id="message" rows="5" placeholder="Scrivi qui il tuo messaggio." required></textarea>
                         </div>
 
                         <button type="submit" class="btn-submit">Invia Richiesta</button>
@@ -238,6 +237,7 @@
 
 </body>
 </html>
+
 
 
 
