--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="section-header">
                 <h2>La Nostra Roadmap</h2>
             </div>
-            <div class="roadmap-container">
+            <div class="roadmap-wrapper">
                 <div class="timeline-step">
                     <h5>Q4 2026</h5>
                     <p>Primo campione materiale.</p>
@@ -266,6 +266,7 @@
 
 </body>
 </html>
+
 
 
 
