--- a/index.html
+++ b/index.html
@@ -143,24 +143,36 @@
         </div>
     </section>
 
-    <section id="roadmap" class="section-padding">
+    <section id="roadmap" class="section-padding bg-light">
         <div class="container">
             <div class="section-header">
                 <h2>La Nostra Roadmap</h2>
+                <p>I prossimi passi verso l'industrializzazione.</p>
             </div>
-            <div class="roadmap-wrapper">
-                <div class="timeline-step">
-                    <h5>Q4 2026</h5>
-                    <p>Primo campione materiale.</p>
+            
+            <div class="roadmap-grid">
+                
+                <div class="roadmap-card">
+                    <div class="step-number">I</div>
+                    <div class="date-badge">Q4 2026</div>
+                    <h3>Primo Campione</h3>
+                    <p>Produzione del primo lotto di materiale validato in laboratorio.</p>
                 </div>
-                <div class="timeline-step">
-                    <h5>Q2 2027</h5>
-                    <p>Impianto pilota: 1000 kg/giorno.</p>
+
+                <div class="roadmap-card">
+                    <div class="step-number">II</div>
+                    <div class="date-badge">Q2 2027</div>
+                    <h3>Impianto Pilota</h3>
+                    <p>Scale-up della tecnologia per processare 1000 kg/giorno di biomassa.</p>
                 </div>
-                <div class="timeline-step no-border">
-                    <h5>Q2 2028</h5>
-                    <p>Avvio Bioraffineria Industriale.</p>
+
+                <div class="roadmap-card">
+                    <div class="step-number">III</div>
+                    <div class="date-badge">Q2 2028</div>
+                    <h3>Industria</h3>
+                    <p>Avvio della Bioraffineria Industriale e commercializzazione su larga scala.</p>
                 </div>
+
             </div>
         </div>
     </section>
@@ -266,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
