--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+       <script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"siteId":4409144,"cookiePolicyId":84481063,"lang":"it","storage":{"useSiteId":true}};
+</script>
+<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/4409144.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+       
        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RLQ48ES5JC"></script>
 <script>
@@ -278,6 +286,7 @@
 
 </body>
 </html>
+
 
 
 
